--- a/Terraform-Jenkins/Jenkinsfile
+++ b/Terraform-Jenkins/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
         stage('Terraform plan'){
             steps {
                 dir ("day-2-tfvars"){
-                    sh '${plan} ? terraform plan : echo Skip'
+                    sh '${params.plan} ? terraform plan : echo Skip'
                 }
             }
         }
@@ -28,7 +28,7 @@ pipeline {
         stage('Terraform apply'){
             steps {
                 dir ("day-2-tfvars"){
-                    sh '${apply} ? terraform apply -auto-approve : echo Skip'
+                    sh '${params.apply} ? terraform apply -auto-approve : echo Skip'
                 }
             }
         }
